documents/design-document-01_grammar.txt
program        -> declaration* EOF ;

declaration    -> letDecl
                | statement ;

letDecl        -> VARIABLE_BIND | FUNCTION_BIND ;
VARIABLE_BIND  -> "let" IDENTIFIER (":" TYPE )? ( "=" expression )? ";" ;
FUNCTION_BIND  -> "let" IDENTIFIER "(" ARGUMENTS ")" "->" BODY;
BODY           -> SINGLE_EXPRESSION | FULL_BODY;

statement      -> exprStmt
                | ifStmt
                | printStmt 
                | block ;

exprStmt       -> expression ";" ;
ifStmt         -> "if" "(" expression ")" statement ( "else" statement )? ;
printStmt      -> "print" "(" expression ")" ";" ;
block          -> "{" declaration* "}"

expression     -> assignment ;
assignment     -> IDENTIFIER "=" assignment
                | logic_or ;
logic_or       -> logic_and ( "or" logic_and )* ;
logic_and      -> equality ( "and" equality )* ;
equality       -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison     -> term ( ( ">" | ">=" | "<" | "<=" ) )
term           -> factor ( ( "-" | "+" ) factor )* ;
factor         -> unary ( ( "/" | "*" ) unary )* ;
unary          -> ( "not" | "-" | "+" ) unary 
                | primary ;
primary        -> NUMBER | STRING | lambda 
                | "True" | "False" | "Null" | "Unit" 
                | IDENTIFIER | ifExpr ;

ifExpr         -> "if" "(" expression ")" "then" expression "else" expression ;

lambda         -> "(" ARGUMENTS ")" "->" body ;
